--- a/porfolio.html
+++ b/porfolio.html
@@ -30,7 +30,7 @@
                             <h4 class="subpost">Camila Sousa Designer</h4>
                         </header>
                         <p class="text0">Criação de logotipo e artes para divulgação no Instagram.</p>
-                                <img src="https://github.com/jeanbreno/jeanbreno.github.io/blob/main/Camila%20Sousa.png" alt="conteúdos da camila sousa designer" class="camila_designer">
+                                <img src="https://raw.githubusercontent.com/jeanbreno/jeanbreno.github.io/main/Camila%20Sousa.png" alt="conteúdos da camila sousa designer" class="camila_designer">
                                <img src="camilasousadesigner/Agenda%20baerta%20mensal.png" alt="conteúdos da camila sousa designer" class="camila_designer">
                                 <img src="camilasousadesigner/Agenda%20baerta%20semanal.png" alt="conteúdos da camila sousa designer" class="camila_designer">
                                 <img src="camilasousadesigner/Agenda%20baerta.png" alt="conteúdos da camila sousa designer" class="camila_designer">
