--- a/porfolio.html
+++ b/porfolio.html
@@ -6,17 +6,17 @@
         <meta name="description" content="Site com portifólio e currículo pertencente ao Jean Breno">
         <meta name="keywords" content="curriculo, front-end, uva, jean breno, UX, web, developer web, desenvolvimento web, html, css, javascript">
         <meta name="author" content="Jean Breno">
-        <title>Currículo - Jean Breno</title>
+        <title>Currículo | Jean Breno</title>
     </head>
-    <body>
+    <body class="body">
         <header>
-           <!-- <img src="fundo%20-%20Copia%20(2).png" alt="fundo header" class="fundo_header"> -->
-            <menu> 
+            
+            <menu class="menu"> 
                 <button class="button"><a href="quem%20sou%20eu.html" title="quem sou eu" target="_self"> Quem sou eu</a></button>
                 <button class="button"><a href="porfolio.html" title="meu portfolio" target="_self"> Portfólio</a></button>
                 <button class="button"><a href="curriculo.html" title="meu currículo" target="_self"> Currículo</a></button>
             </menu>
-            <!--img src="WhatsApp%20Image%202020-05-19%20at%2009.59.00%20-%20Copia.jpeg" alt="foto perfil" class="foto_perfil"-->
+            <img src="WhatsApp%20Image%202020-05-19%20at%2009.59.00%20-%20Copia.jpeg" alt="foto perfil" class="foto_perfil">
             <h1 id="title">Portfólio</h1>
 
                 
@@ -30,7 +30,7 @@
                             <h4 class="subpost">Camila Sousa Designer</h4>
                         </header>
                         <p class="text0">Criação de logotipo e artes para divulgação no Instagram.</p>
-                                <img src="https://raw.githubusercontent.com/jeanbreno/jeanbreno.github.io/main/Camila%20Sousa.png" alt="conteúdos da camila sousa designer" class="camila_designer">
+                                <img src="camilasousadesigner/Camila%20Sousa.png" alt="conteúdos da camila sousa designer" class="camila_designer">
                                <img src="camilasousadesigner/Agenda%20baerta%20mensal.png" alt="conteúdos da camila sousa designer" class="camila_designer">
                                 <img src="camilasousadesigner/Agenda%20baerta%20semanal.png" alt="conteúdos da camila sousa designer" class="camila_designer">
                                 <img src="camilasousadesigner/Agenda%20baerta.png" alt="conteúdos da camila sousa designer" class="camila_designer">
