--- a/quem sou eu.html
+++ b/quem sou eu.html
@@ -16,7 +16,7 @@
                 <button class="button"><a href="porfolio.html" title="meu portfolio" target="_self"> Portfólio</a></button>
                 <button class="button"><a href="curriculo.html" title="meu currículo" target="_self"> Currículo</a></button>
             </menu>
-            <img src="WhatsApp%20Image%202020-05-19%20at%2009.59.00%20-%20Copia.jpeg" alt="foto perfil" class="foto_perfil">
+            <img src="https://raw.githubusercontent.com/jeanbreno/jeanbreno.github.io/main/WhatsApp%20Image%202020-05-19%20at%2009.59.00%20-%20Copia.jpeg" alt="foto perfil" class="foto_perfil">
             <h1 id="title">Quem sou eu</h1>
 <hr>
            <section>
