--- a/curriculo.html
+++ b/curriculo.html
@@ -19,7 +19,7 @@
                         <a href="curriculo.html" title="meu currículo" target="_self"> Currículo</a></button>
                 </menu>
             </nav>
-            <img src="WhatsApp%20Image%202020-05-19%20at%2009.59.00%20-%20Copia.jpeg" alt="foto perfil" class="foto_perfil">
+            <img src="https://raw.githubusercontent.com/jeanbreno/jeanbreno.github.io/main/WhatsApp%20Image%202020-05-19%20at%2009.59.00%20-%20Copia.jpeg" alt="foto perfil" class="foto_perfil">
             
             <h1 id="title">Currículo</h1>
 
