--- a/curriculo.html
+++ b/curriculo.html
@@ -12,7 +12,7 @@
             <nav>
                 <menu class="menu"> 
                     <button class="button">
-                        <a href="quem%20sou%20eu.html" title="quem sou eu" target="_self"> Quem sou eu</a></button>
+                        <a href="quemsoueu.html" title="quem sou eu" target="_self"> Quem sou eu</a></button>
                     <button class="button">
                         <a href="porfolio.html" title="meu portfolio" target="_self"> Portfólio</a></button>
                     <button class="button">
