--- a/curriculo.html
+++ b/curriculo.html
@@ -17,6 +17,8 @@
                         <a href="porfolio.html" title="meu portfolio" target="_self"> Portfólio</a></button>
                     <button class="button">
                         <a href="curriculo.html" title="meu currículo" target="_self"> Currículo</a></button>
+                    <button class="button">
+                        <a href="contato.html" title="meu contato" target="_self"> Contato</a></button>
                 </menu>
             </nav>
             <img src="https://raw.githubusercontent.com/jeanbreno/jeanbreno.github.io/main/WhatsApp%20Image%202020-05-19%20at%2009.59.00%20-%20Copia.jpeg" alt="foto perfil" class="foto_perfil">
