--- a/porfolio.html
+++ b/porfolio.html
@@ -15,12 +15,15 @@
                 <button class="button"><a href="quemsoueu.html" title="quem sou eu" target="_self"> Quem sou eu</a></button>
                 <button class="button"><a href="porfolio.html" title="meu portfolio" target="_self"> Portfólio</a></button>
                 <button class="button"><a href="curriculo.html" title="meu currículo" target="_self"> Currículo</a></button>
+                <button class="button">
+                        <a href="contato.html" title="meu contato" target="_self"> Contato</a></button>
             </menu>
             <img src="https://raw.githubusercontent.com/jeanbreno/jeanbreno.github.io/main/WhatsApp%20Image%202020-05-19%20at%2009.59.00%20-%20Copia.jpeg" alt="foto perfil" class="foto_perfil">
+          </header>
             <h1 id="title">Portfólio</h1>
 
                 
-        </header> 
+        
             <section>
                 <header >
                     <h2 class="subtitle"> Design e criação de conteúdo</h2>
