--- a/porfolio.html
+++ b/porfolio.html
@@ -12,7 +12,7 @@
         <header>
             
             <menu class="menu"> 
-                <button class="button"><a href="quemsoueu.html" title="quem sou eu" target="_self"> Quem sou eu</a></button>
+                <button class="button"><a href="index.html" title="quem sou eu" target="_self"> Home</a></button>
                 <button class="button"><a href="porfolio.html" title="meu portfolio" target="_self"> Portfólio</a></button>
                 <button class="button"><a href="curriculo.html" title="meu currículo" target="_self"> Currículo</a></button>
                 <button class="button">
