--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
            <section>
                 <article>
                     <p> Olá! Me chamo Jean e tenho 26 anos.  </p>
-                    <p>Sou graduando de Sistemas de Informação na Universidade Veiga de Almeida. Curso Desenvolvimento de Sistemas Mobile, no SENAI, que utiliza a plataforma MIT App Inventor para desenvolver aplicativos. E, na Universidade Federal do Rio Grande do Norte - Instituto Metrópole Digital, pelo programa Novos Caminhos, faço parte da turma de Programador Web. </p>
+                    <p>Sou graduando de Sistemas de Informação na Universidade Veiga de Almeida. </p>
+                    <p>Concluí o curso de  Desenvolvimento de Sistemas Mobile, no SENAI, que utilizava a plataforma MIT App Inventor para desenvolver aplicativos. </p> 
+                    <p>E, na Universidade Federal do Rio Grande do Norte - Instituto Metrópole Digital, pelo programa Novos Caminhos, faço parte da turma de Programador Web. </p>
                     
                
                 </article>
