--- a/contato.html
+++ b/contato.html
@@ -45,6 +45,17 @@
                 </article>
             </section> 
         <section>
+            <address>
+                <h4 class="subtitle"> Contato</h4>
+                    <ul class="lista_contato">
+                        <li><a href="https://wa.me/5521974775037" target="_blank"> Meu WhatsApp</a></li>
+                        <li><a href="mailto: jean.breno@yahoo.com" target="_blank">Meu E-mail</a></li>
+                        <li><a href="https://www.linkedin.com/in/jeanbreno/" target="_blank">Meu LinkedIn</a></li>
+                    </ul>
+            </address>
+        </section>
+                
+        <section>
                 <footer class="rodape">
                     <blockquote>
                         <em>"A definição de insanidade é fazer a mesma coisa repetidamente e esperar resultados diferentes."</em>
